release: bump version to 0.75.0